fix spacing on nav links for mobile

--- a/css/dark.css
+++ b/css/dark.css
@@ -368,10 +368,9 @@ footer::before {
   }
 }
 
-@media (max-width: 400px) {
-  .logo {
-    font-size: 1.2rem;
-    font-weight: 700;
+@media (max-width: 450px) {
+  .nav-links {
+    gap: 1rem;
   }
 }
 
